tests/parsing/smtlib/mcil/errors/280_define-system_bad_attribute.mcil
(define-system sys :input () :reachable)